adding swagger to auth and items apis
