# Todo/src/pkg/handler/auth.go
@@ -8,6 +8,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//	@Tags			auth
+//	@Summary		sign up
+//	@Description	register a new user
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		todoapp.User	true	"account info"
+//	@Success		200		{integer}	integer			1
+// Failure default {object} errorResponse
+// Failure 400,404 {object} errorResponse
+// Failure 500 {object} errorResponse
+//	@Router			/auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var (
 		input todoapp.User
@@ -34,6 +45,17 @@ type signInInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
+//	@Tags			auth
+//	@Summary		sign in
+//	@Description	logging in the user
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		signInInput	true	"username password"
+//	@Success		200		{string}	string		token	"someToken"
+// Failure default {object} errorResponse
+// Failure 400,404 {object} errorResponse
+// Failure 500 {object} errorResponse
+//	@Router			/auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var (
 		input signInInput
